audiovisualizers: spectrascope: SIGSEGV when shader fade-and-move-horiz-out(6)
The following pipeline fails with SIGSEGV
gst-launch-1.0 audiotestsrc num-buffers=1 ! spectrascope shader=6 ! fakesink
The error is invariant of audio source and video sink or the presence of buffers
Behaviour
SIGSEGV caught, core dumped. See info below.
Expected Behaviour
Pipeline should run normally and stop after EOS as with other shaders
gst-launch-1.0 audiotestsrc num-buffers=1 ! spectrascope shader=8 ! fakesink
System
Linux diamond-tiara 5.16.10-arch1-1 #1 SMP PREEMPT Wed, 16 Feb 2022 19:35:18 +0000 x86_64 GNU/Linux
Plugin Details:
Name audiovisualizers
Description Creates video visualizations of audio input
Filename /usr/lib/gstreamer-1.0/libgstaudiovisualizers.so
Version 1.20.0
License LGPL
Source module gst-plugins-bad
Source release date 2022-02-03
Binary package Arch Linux gst-plugins-bad 1.20.0-2
Origin URL https://www.archlinux.org/
Coredump Info
UID: 1000
GID: 1000
Signal: 11 (SEGV)
Timestamp: Fri 2022-02-18 19:56:53 CET (20s ago)
Command Line: gst-launch-1.0 audiotestsrc num-buffers=1 $'!' spectrascope shader=6 $'!' fakesink
Executable: /usr/bin/gst-launch-1.0
Control Group: /user.slice/user-1000.slice/session-1.scope
Unit: session-1.scope
Slice: user-1000.slice
Session: 1
Owner UID: 1000